# fitness-journey

./: .gitignore  README.md  app.py  gymProgress.ipynb  preprocessing.py  pyproject.toml  req.txt
data/: 2023-04-27 18 58 40.csv  GymBook-Logs-2023-04-08.csv  weight.csv
src/: app.py  app_vizro.py  days.ipynb  exercise_compendium.py  preprocessing.py
src/components/: custom_elements.py  header.py  modified_components.py  sidebar.py
src/pages/: ai_queries.py  exercise_distribution.py  exercise_statistics.py  general_statistics.py  playground.py  powerlifting_statistics.py  program_statistics.py
src_dmc_deprecated/: app.py  pandasai_test.py  readme.md
src_dmc_deprecated/components/: custom_elements.py  sidebar.py
src_dmc_deprecated/pages/: exercise_statistics.py  playground.py
src_dmc_deprecated/utils/: common_functions.py
