[tool.poetry]
name = "fitness-journey"
version = "0.1.0"
description = "Visualization of my gym progress"
authors = ["fsaal <f.saalfrank@gmail.com>"]
readme = "README.md"
packages = [{ include = "fitness_journey" }]

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.11.1"
numpy = "^1.25.1"
dash-mantine-components = "^0.12.1"
pandas = "^2.0.3"
dash-ag-grid = "^2.4.0"
statsmodels = "^0.14.1"
dash-iconify = "^0.1.2"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
