[project]
name = "fitness-journey"
version = "0.1.0"
description = "A comprehensive dashboard for analyzing and visualizing personal fitness data using Plotly Dash."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
    "statsmodels>=0.14.4",
    "vizro>=0.1.24",
    "wordcloud>=1.9.3",
]

# Add ruff line length to 120
[tool.ruff]
line-length = 120

[tool.uv]
dev-dependencies = ["ipykernel>=6.29.5", "ruff>=0.6.9"]
